--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -1,1 +1,8 @@
 @import "../styles/variables";
+
+@mixin center($direction) {
+	display: flex;
+	flex-direction: $direction;
+	justify-content: center;
+	align-items: center;
+}
